# Tintero

./: .gitignore  CMakeLists.txt  README.md
Tintero/: client.cpp  mainwindow.cpp  mainwindow.h
build-Tintero-Desktop_Qt_5_14_1_clang_64bit-Debug/: Makefile  moc_client.cpp  moc_mainwindow.cpp  qrc_resources.cpp  ui_client.h  ui_mainwindow.h
build-Tintero-Desktop_Qt_5_14_1_clang_64bit-Debug/Tintero.app/Contents/: Info.plist
build-Tintero-Desktop_Qt_5_14_1_clang_64bit-Debug/Tintero.app/Contents/MacOS/: Tintero
client/Tintero/: Tintero.pro  client.h  client.ui  mainwindow.ui  resources.qrc
client/build-Tintero-Desktop_Qt_5_14_1_clang_64bit-Debug/: moc_predefs.h
fortune_client_modified/fortune_client_modified/: Client.cpp  Client.h  fortune_client_modified.pro  main.cpp
fortune_client_modified/fortune_server_modified/: Server.cpp  Server.h  fortune_server_modified.pro  main.cpp
fortune_client_modified/fortune_server_modified/database/: users.db
fortune_modified/build-fortune_client_modified-Desktop_Qt_5_14_1_MinGW_64_bit-Debug/: object_script.fortune_client_modified
fortune_modified/build-fortune_server_modified-Desktop_Qt_5_14_1_MinGW_64_bit-Debug/: .qmake.stash
fortune_modified/fortune_client_modified/: Client.cpp  Client.h  clickableframe.cpp  clickableframe.h  clickablelabel.cpp  clickablelabel.h  client.qrc  doctitledialog.cpp  doctitledialog.h  doctitledialog.ui  document.cpp  document.h  fortune_client_modified.pro  main.cpp  mainpage.cpp  mainpage.h  mainpage.ui  mainwindow.ui  page.cpp  page.h  page.ui  textedit.cpp  textedit.h  titleDocument.h  transmission.cpp  transmission.h  uridialog.cpp  uridialog.h  uridialog.ui
fortune_modified/fortune_client_modified/tmp/: 9Lvk7DMPDONX.html  r9JPFUjXaXS1.html  ss92C31aPGJK.html
fortune_modified/fortune_server_modified/: Server.cpp  Server.h  fortune_server_modified.pro  main.cpp  server.qrc
fortune_modified/fortune_server_modified/database/: users.db
fortune_modified/fortune_server_modified/doc/: 9Lvk7DMPDONX.html  r9JPFUjXaXS1.html
